# mgil

./: .clang-format  .gitignore  CMakeLists.txt  README.md  demo.cpp  mgil.hpp
